[project]
name = "teleimager"
version = "0.9.9"
description = "TeleImager: multi-camera image streaming service for unitree teleoperation"
authors = [
    { name = "silencht", email = "silencht@qq.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8,<3.11"
dependencies = [
    "logging_mp",
    "aiohttp",
    "aiortc",
    "opencv-python",
    "numpy",
    "pyyaml",
    "pyzmq",
    "pupil-labs-uvc",
]

[project.urls]
Homepage = "https://github.com/silencht/teleimager"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"